# slippi-leaderboard

./: .gitignore  Dockerfile  Pipfile  README.md  crontab  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: deploy_flow.yml  main.yml
django/leaderboard/: admin.py  graphql.py  views.py
django/leaderboard/tests/: test_generate_rankings_table.py
django/slippi_leaderboard/: settings.py  wsgi.py
leaderboard/: models.py
leaderboard/migrations/: 0001_initial.py  0002_remove_account_alternate_name_alter_account_approved_and_more.py  0003_alter_account_slippi_tag_accountupdate.py  0005_alter_account_slippi_tag.py  0009_update_ranking.py
leaderboard/tests/: test_graph_ql.py  test_integration_update_accounts.py  test_validate_slippi_response.py
settings/: base.py  dev.py
slippi_leaderboard/: asgi.py  settings.py
src/django/: manage.py  pyproject.toml
src/django/accounts/: models.py
src/django/leaderboard/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
src/django/leaderboard/management/commands/: update_accounts.py
src/django/leaderboard/migrations/: 0004_alter_account_slippi_tag.py  0006_alter_account_slippi_tag.py  0007_remove_accountupdate_slippi_data_and_more.py  0008_update_remove_account_last_updated_and_more.py
src/django/leaderboard/templates/leaderboard/: account.html  home.html  leaderboard.html
src/django/leaderboard/templatetags/: ranking_delta.py
src/django/leaderboard/tests/: test_integration_update_accounts.py  utils.py
src/django/slippi_leaderboard/: settings.py  urls.py
(+3 files in other folders)
